# Projekt_Game_C-

./: .gitignore  README.md
Game/: AnsiCodes.h  CMakeLists.txt  KeyCodes.h  customunit.cpp  customunit.h  infantry.cpp  infantry.h  infantrybuilder.cpp  infantrybuilder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapwidget.h  plane.cpp  plane.h  planebuilder.cpp  planebuilder.h  player.cpp  player.h  resource.qrc  tank.cpp  tank.h  tankbuilder.cpp  tankbuilder.h  unit.cpp  unit.h  unitbuilder.cpp  unitbuilder.h  unitbuydialog.h
Game/Entity/: Entity.cpp  Entity.h
Game/GameEngine/: GameEngine.cpp  GameEngine.h
Game/InputManager/: ICommand.h  InputManager.cpp  InputManager.h
Game/MenuManager/: MenuManager.cpp  MenuManager.h
Game/ResourceManager/: ResourceManager.cpp  ResourceManager.h
Game/Screens/: CreditsScreen.cpp  CreditsScreen.h  GameScreen.cpp  GameScreen.h  HelpScreen.cpp  HelpScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  mapwidget.cpp  mapwidget.h
Game/Screens/dialogs/: unitbuydialog.cpp
Game/assets/i18n/: game_cz.qm  game_cz.ts  game_en.qm  game_en.ts
Game/assets/legal/EULA/: EULA.docx  EULA.html  EULA.md  EULA.txt
Game/assets/legal/ToS/: ToS.docx  ToS.html  ToS.md  ToS.txt
Game/assets/styles/: style.qss
Game/logger/: Logger.cpp  Logger.h  LoggerMacros.h  LoggerTypes.h
Game/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Game/map/: DefaultLocationBuilder.cpp  DefaultLocationBuilder.h  Location.cpp  Location.h  LocationBuilder.cpp  LocationBuilder.h  LocationDirector.cpp  LocationDirector.h  Tile.cpp  Tile.h  map.cpp  map.h
Game/player/: player.cpp  player.h
Game/src/: main.cpp
Game/src/Core/Assets/: AssetManager.cpp  AssetManager.h  CursorTypes.h
Game/src/Core/Camera/: Camera.h
Game/src/Core/Common/: GameCommands.h  GameTypes.h  ICommand.h  KeyCodes.h  WorldData.h
Game/src/Core/Config/: Config.h  ConfigTypes.h  Configuration.h  ControlTypes.h  GameConfig.h  GameTypes.h  GraphicsTypes.h  LoggerMacros.h  WorldData.h
Game/src/Core/Input/: ICommand.h  InputManager.cpp  InputManager.h  RawInputEvent.h
Game/src/Core/Logger/: Logger.cpp  Logger.h  LoggerMacros.h  LoggerTypes.h
Game/src/Core/Resources/: ResourceManager.cpp  ResourceManager.h
Game/src/Core/Settings/: AudioSettingsManager.cpp  AudioSettingsManager.h  ControlsSettingsManager.cpp  ControlsSettingsManager.h  DisplaySettingsManager.cpp  DisplaySettingsManager.h  GameSettingsManager.cpp  GameSettingsManager.h  GraphicsSettingsManager.cpp  GraphicsSettingsManager.h
Game/src/Game/Actions/: CameraActions.cpp  CameraActions.h  GameActions.h  GameCommands.h  GuardUnitAction.cpp  GuardUnitAction.h  MoveUnitAction.cpp  MoveUnitAction.h  ScatterUnitAction.cpp  ScatterUnitAction.h  StopUnitAction.cpp  StopUnitAction.h  UnitActions.cpp  UnitActions.h  ZoomAction.cpp  ZoomAction.h
Game/src/Game/Camera/: Camera.cpp  Camera.h
Game/src/Game/Engine/: GameEngine.cpp  GameEngine.h  GameManager.cpp  GameManager.h  GameSpeed.h
Game/src/Game/Entities/: Entity.cpp  Entity.h  EntityTypes.h  unitbuilder.cpp  unitbuilder.h
Game/src/Game/Map/: Chunk.h  Difficulty.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  MapStats.h  Tile.h
Game/src/Game/Player/: player.h
Game/src/Game/Resources/: AssetManager.cpp  AssetManager.h  ConfigManager.cpp  ConfigManager.h  ResourceManager.cpp  ResourceManager.h
Game/src/Game/View/: Camera.cpp  Camera.h
Game/src/Main/: MainWindow.cpp  MainWindow.h  main.cpp
Game/src/UI/Components/: MenuButton.cpp  MenuButton.h
Game/src/UI/HUD/: MinimapProvider.cpp  MinimapProvider.h  TacticalHUD.cpp  TacticalHUD.h
Game/src/UI/Manager/: AudioSettingsManager.h  ConfigManager.cpp  ConfigManager.h  ControlsSettingsManager.cpp  ControlsSettingsManager.h  DisplaySettingsManager.cpp  DisplaySettingsManager.h  GameManager.cpp  GameManager.h  GameSettingsManager.cpp  GameSettingsManager.h  GraphicsSettingsManager.cpp  GraphicsSettingsManager.h  KeyBindingManager.cpp  KeyBindingManager.h  MenuManager.cpp  MenuManager.h
Game/src/UI/Screens/: AbstractScreen.cpp  AbstractScreen.h  GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  LoadGameScreen.cpp  LoadGameScreen.h  LoadingScreen.cpp  LoadingScreen.h  MainMenuScreen.cpp  MainMenuScreen.h  MenuScreen.cpp  MenuScreen.h  NewGameScreen.cpp  NewGameScreen.h  SettingsScreen.cpp  SettingsScreen.h
Game/src/UI/Widgets/: BaseTacticalDialog.cpp  BaseTacticalDialog.h  InformationDialog.cpp  InformationDialog.h  KeyCaptureDialog.cpp  KeyCaptureDialog.h  TacticalDialog.cpp  TacticalDialog.h
Game/unit/: unit.h
Game/unit_builder/: InfantryBuilder.h  PlaneBuilder.h  TankBuilder.h  unitbuilder.cpp
Game/unit_builder/units/: infantry.h  plane.cpp  plane.h  tank.cpp  tank.h
